hard-gists/2b8e2e05cf05a630b132/run.log
=== Docker Run Log for 2b8e2e05cf05a630b132 ===
Started at: Mi 29. Okt 13:24:51 CET 2025

[2025-10-29 13:24:52] START: Running container for 2b8e2e05cf05a630b132
[2025-10-29 13:24:52] SUCCESS: Container c11a5dfeda64e071349bc3bc63d432efb7e3bbd2849d9f7b143fd09995c9d595 started for 2b8e2e05cf05a630b132
=== Container logs for 2b8e2e05cf05a630b132 ===
  File "/snippet.py", line 41
    print "step %d : entropy %s" % (step,e) # error/loss should decrease over time
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2b8e2e05cf05a630b132 ===
[2025-10-29 13:24:54] INFO: Container c11a5dfeda64e071349bc3bc63d432efb7e3bbd2849d9f7b143fd09995c9d595 has stopped
